ajout branche page_copie

--- a/page.html
+++ b/page.html
@@ -9,7 +9,7 @@
 <body>
 
       <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-warning-subtle">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-warning">
         <div class="container">
             <a class="navbar-brand" href="#">MonSite pour branche page_copie </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
