modifs branche page_copie 16h53

--- a/page.html
+++ b/page.html
@@ -38,8 +38,7 @@
     <div class="card" style="width: 18rem;">
         <img src="images/loutre5.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+            <h5 class="card-title">Loutres</h5>
             <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
     </div>
