--- a/page.html
+++ b/page.html
@@ -35,6 +35,7 @@
         </div>
     </header>
 
+<div class="d-flex flex-row justify-content-center">
     <div class="card" style="width: 18rem;">
         <img src="images/loutre5.jpg" class="card-img-top" alt="...">
         <div class="card-body">
@@ -42,6 +43,7 @@
             <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
     </div>
+</div>
   
 
 
